# tensorboard

./: .bazelignore  .bazelrc  .dockerignore  .eslintignore  .eslintrc.json  .git-blame-ignore-revs  .gitattributes  .gitignore  .mailmap  .prettierignore  .prettierrc.json  .pylintrc  .travis.yml  =2.13.0.dev20230428  ADDING_A_PLUGIN.md  AGENTS_DEV.md  AGENTS_DOC.md  AUTHORS  BUILD  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  RELEASE.md  SECURITY.md  WORKSPACE  angular-metadata.tsconfig.json  angular.json  buildPIPandDeploy.sh  docs_test.sh  entrypoint.sh  msg  package.json  pyproject.toml  terminal.txt  test.js  test_bazel_cc.sh  tsconfig-lax.json  (+2 more)
.github/: 00-bug-performance-issue.md  10-documentation-issue.md  20-feature-request.md  30-build-installation-issue.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  installation_problem.md
.github/workflows/: ci-docker.yml  ci.yml  nightly-release.yml  validate-pr.yml
backend/: application_test.py
ci/: bazelrc  bazelrc_github  check_pr.js  download_bazel.sh  download_buildifier.sh  download_buildozer.sh  download_executable.sh
components/tf_storage/: storage.ts
docs/: .yamllint  1get_started.ipynb  _book.yaml  _index.yaml  _project.yaml  dataframe_api.ipynb  debugger_v2.md  fairness-indicators.md  fairness_indicators.md  get_started.ipynb  gradient_tape.py  gradient_tape_fixed,py.py  graphs.ipynb  hyperparameter_tuning_with_hparams.ipynb  image_summaries.ipynb  kaggle_keras_regression_tutorial.py  migrate.ipynb  overview.md  scalars.py  scalars2.py  scalars_and_keras.ipynb  summaries.md  tbdev_getting_started.ipynb  tensorboard_in_notebooks.ipynb  tensorboard_profiling_keras.ipynb  tensorboard_projector_plugin.ipynb  text_summaries.ipynb  timeseries_dashboard.md  what_if_tool.md
docs/api_docs/: README.md
docs/design/: colab_integration.md  generic_data_apis.md  generic_data_auth.md  generic_data_ingestion.md  route_namespaced_state.md  rustboard.md
docs/r1/: get_started.md  graphs.md  histograms.md  overview.md  summaries.md
docs/r2/: TensorBoard_Scalars_and_Keras_(Basic).ipynb  get_started.ipynb  graphs.ipynb  hyperparameter_tuning_with_hparams.ipynb  image_summaries.ipynb  migrate.ipynb  migrate_tf2.ipynb  scalars_and_keras.ipynb  tensorboard_in_notebooks.ipynb  tensorboard_profiling_keras.ipynb  tensorboard_quickstart.ipynb  tensorboard_scalars_and_keras.ipynb  tensorboard_scalars_and_keras_basic.ipynb  what-if-tool.md
log_tayo/: graphdef_mnist.pbtxt  mnist_with_summaries.py  output_tf_graph_board.txt  output_tf_graph_dashboard.txt
log_tayo/test/: events.out.tfevents.1515280094.tayo-glaptop
log_tayo/train/: events.out.tfevents.1515280092.tayo-glaptop
patches/: @angular+build-tooling+0.0.0-2113cd7f66a089ac0208ea84eee672b2529f4f6c.patch  @angular+build-tooling+0.0.0-7d103b83a07f132629592fc9918ce17d42a5e382.patch  @angular+build-tooling+0.0.0-db91da4e742cd081bfba01db2edc4e816018419b.patch  @bazel+concatjs+5.7.0.patch  @bazel+concatjs+5.8.1.patch  README.md  protobuf_6_31_1_java_export.patch  rules_cc_protobuf.patch  rules_closure_soy_cli.patch
tensorboard/: BUILD  __init__.py  __main__.py  assets_test.py  auth.py  auth_test.py  build_with_tf.py  context.py  context_test.py  data_compat.py  data_compat_test.py  dataclass_compat.py  dataclass_compat.py.orig  dataclass_compat_test.py  db.py  db_test.py  default.py  default_notf.py  default_test.py  defs.bzl  encode_png_benchmark.py  errors.py  errors_test.py  http_api.md  ingester.py  ingester_test.py  lazy.py  lazy_test.py  legacy_tbdev_subcommand.py  lib_test.py  loader.py  loader_test.py  main.py  main_dev.py  main_lib.py  main_notf.py  manager.py  manager_e2e_test.py  manager_test.py  notebook.py  (+25 more)
tensorboard/backend/: BUILD  application.py  application_test.py  auth_context_middleware_test.py  auth_context_test.py  client_feature_flags.py  client_feature_flags_test.py  context.py  context_test.py  empty_path_redirect.py  empty_path_redirect_test.py  experiment_id.py  experiment_id_test.py  experimental_plugin.py  frame_ancestors.py  frame_ancestors_test.py  http_util.py  http_util_test.py  json_util.py  json_util_test.py  path_prefix.py  path_prefix_test.py  process_graph.py  security_validator.py  security_validator_test.py
tensorboard/compat/: BUILD  __init__.py  compat_test.py  notf.py
tensorboard/components/: BUILD  analytics.html  analytics.ts  index.html  lib.html  ng_polymer_lib.html  ng_tensorboard.html  polymer.html  polymer3_core_components.ts  polymer3_interop_helper.ts  polymer3_lib.ts  polymer_config.ts  security.html  tensorboard.html  tensorboard.ts  tensorboard.uninlined.html  trace_viewer.html
tensorboard/components_polymer3/: BUILD  analytics.html  analytics.ts  polymer3_lib.ts  polymer_lib.html  security.ts  tensorboard.uninlined.html
tensorboard/data/: BUILD  __init__.py  auth_test.py  dispatching_provider.py  dispatching_provider_test.py  grpc_provider.py  grpc_provider_test.py  ingester_test.py  provider.py  provider_test.py  server_ingester.py  (+1 more)
tensorboard/data/server/: .gitattributes  .gitignore  BUILD  Cargo.toml  DEVELOPMENT.md  bench.rs  blob_key.rs  cli.rs  commit.rs  data_compat.rs  demo.pb.rs  demo.proto  disk_logdir.rs  downsample.rs  event_file.rs  gcs.rs  gen_protos_tool.rs  lib.rs  logdir.rs  main.rs  masked_crc.rs  reservoir.rs  run.rs  rustboard_core_doc_server.py  rustfmt.toml  scripted_reader.rs  server.rs  tensorboard.data.pb.rs  tensorboard.pb.rs  tf_record.rs  types.rs  update_protos.py  writer.rs
tensorboard/data/server/cargo/: BUILD.bazel
tensorboard/data/server/cli/: dynamic_logdir.rs  dynamic_logdir.rs.orig
tensorboard/data/server/gcs/: auth.rs  client.rs  gsutil.rs  logdir.rs
tensorboard/data/server/pip_package/: BUILD  build.py  build_pip_package_test.py  build_test.py  install.py  setup.py
tensorboard/data/server/pip_package/tensorboard_data_server/: __init__.py
tensorbored/: BUILD  default.py  default_test.py  manager_test.py  program_test.py  version_test.py
(+4316 files in other folders)
