[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorboard"
dynamic = ["version", "dependencies"]
description = "TensorBoard lets you watch Tensors Flow"
readme = {file = "tensorboard/pip_package/README.rst", content-type = "text/x-rst"}
requires-python = ">=3.9"
license = {text = "Apache 2.0"}
authors = [{name = "Google Inc.", email = "packages@tensorflow.org"}]
keywords = [
    "tensorflow",
    "tensorboard",
    "tensor",
    "machine learning",
    "visualizer",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
tensorboard = "tensorboard.main:run_main"

[project.entry-points."tensorboard_plugins"]
projector = "tensorboard.plugins.projector.projector_plugin:ProjectorPlugin"

[project.optional-dependencies]
tensorflow = ["tf-nightly"]

[tool.setuptools.dynamic]
version = {attr = "tensorboard.version.VERSION"}
dependencies = {file = ["tensorboard/pip_package/requirements.txt"]}

[tool.setuptools.packages.find]
include = ["tensorboard", "tensorboard.*"]
exclude = ["tensorboard.pip_package", "tensorboard.pip_package.*"]

[tool.setuptools.package-data]
tensorboard = ["webfiles.zip"]
"tensorboard.plugins.projector" = [
    "tf_projector_plugin/index.js",
    "tf_projector_plugin/projector_binary.html",
    "tf_projector_plugin/projector_binary.js",
]

[tool.black]
line-length = 80
target-version = ["py36", "py37", "py38"]
