# Copyright 2020 The TensorFlow Authors. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

[package]
name = "rustboard"
version = "0.3.0-alpha.0"
authors = ["The TensorFlow Authors <tensorboard-gardener@google.com>"]
edition = "2018"
default-run = "rustboard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.0"
async-trait = "0.1.41"
base64 = "0.13.0"
byteorder = "1.3.4"
clap = "3.0.0-beta.2"
crc = "1.8.1"
crossbeam = "0.8.0"
env_logger = "0.8.2"
futures-core = "0.3.12"
log = "0.4.11"
prost = "0.7.0"
rand = "0.7.3"
rand_chacha = "0.2.2"
rayon = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
thiserror = "1.0.21"
tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.2", features = ["net"] }
tonic = "0.4.0"
walkdir = "2.3.1"

[dev-dependencies]
prost-build = "0.7.0"
tempfile = "3.1.0"
tonic-build = "0.4.0"

[[bin]]
name = "rustboard"
path = "main.rs"

[[bin]]
name = "bench"
path = "bench.rs"

[lib]
name = "rustboard_core"
path = "lib.rs"

[package.metadata.raze]
default_gen_buildrs = false
package_aliases_dir = "./cargo"
rust_rules_workspace_name = "io_bazel_rules_rust"
workspace_path = "//third_party/rust"
genmode = "Remote"
targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]

[package.metadata.raze.crates.crc.'1.8.1']
gen_buildrs = true

[package.metadata.raze.crates.libc.'0.2.80']
gen_buildrs = true

[package.metadata.raze.crates.log.'0.4.11']
gen_buildrs = true

[package.metadata.raze.crates.indexmap.'1.6.0']
additional_flags = [
    "--cfg=has_std",
]

[package.metadata.raze.crates.proc-macro-error.'1.0.4']
gen_buildrs = true

[package.metadata.raze.crates.proc-macro2.'1.0.24']
additional_flags = [
    "--cfg=use_proc_macro",
    "--cfg=wrap_proc_macro",
]

[package.metadata.raze.crates.prost-build.'0.7.0']
gen_buildrs = true
additional_deps = ["@com_google_protobuf//:protoc"]
additional_env = { PROTOC = "$(execpath @com_google_protobuf//:protoc)" }
