# Copyright 2020 The TensorFlow Authors. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

[package]
name = "rustboard"
version = "0.8.0-alpha.0"
authors = ["The TensorFlow Authors <tensorboard-gardener@google.com>"]
# Keep in sync with `edition` in rustfmt.toml.
edition = "2018"
default-run = "rustboard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.0"
async-trait = "0.1.41"
base64 = "0.13.0"
byteorder = "1.3.4"
bytes = "1.0.1"
clap = "3.0.0-beta.2"
crc = "1.8.1"
crossbeam = "0.8.0"
env_logger = "0.8.2"
futures-core = "0.3.12"
gcp_auth = "0.7.4"
log = "0.4.11"
prost = "0.9.0"
prost-types = "0.9.0"
rand = "0.7.3"
rand_chacha = "0.2.2"
rayon = "1.5.0"
reqwest = { version = "0.11.0", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
thiserror = "1.0.21"
tokio = { version = "1.8.4", features = ["macros", "rt-multi-thread", "parking_lot"] }
tokio-stream = { version = "0.1.2", features = ["net"] }
tonic = "0.6.2"
tonic-reflection = "0.3.0"
walkdir = "2.3.1"

[dev-dependencies]
prost-build = "0.9.0"
tempfile = "3.1.0"
tonic-build = "0.6.2"

[[bin]]
name = "rustboard"
path = "main.rs"

[[bin]]
name = "bench"
path = "bench.rs"

[[bin]]
name = "gsutil"
path = "gcs/gsutil.rs"

[lib]
name = "rustboard_core"
path = "lib.rs"

[package.metadata.raze]
default_gen_buildrs = false
package_aliases_dir = "./cargo"
rust_rules_workspace_name = "rules_rust"
workspace_path = "//third_party/rust"
genmode = "Remote"
targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]

[package.metadata.raze.crates.crc.'1.8.1']
gen_buildrs = true

[package.metadata.raze.crates.libc.'0.2.126']
gen_buildrs = true

[package.metadata.raze.crates.log.'0.4.11']
gen_buildrs = true

[package.metadata.raze.crates.indexmap.'1.8.2']
additional_flags = [
    "--cfg=has_std",
]

[package.metadata.raze.crates.proc-macro-error.'1.0.4']
gen_buildrs = true

[package.metadata.raze.crates.proc-macro-nested.'0.1.7']
gen_buildrs = true

[package.metadata.raze.crates.proc-macro2.'1.0.43']
additional_flags = [
    "--cfg=use_proc_macro",
    "--cfg=wrap_proc_macro",
]

[package.metadata.raze.crates.prost-build.'0.9.0']
gen_buildrs = true

[package.metadata.raze.crates.ring.'0.16.20']
gen_buildrs = true
data_attr = "glob([\"src/**/*.der\"])"

[package.metadata.raze.crates.tonic-reflection.'0.3.0']
gen_buildrs = true
build_data_dependencies = ["@com_google_protobuf//:protoc"]

[package.metadata.raze.crates.tonic-reflection.'0.3.0'.buildrs_additional_environment_variables]
PROTOC = "$(execpath @com_google_protobuf//:protoc)"
# We don't have easy access to a rustfmt binary, so make it a no-op.
# https://github.com/bazelbuild/rules_rust/issues/87
RUSTFMT = "/bin/true"

[package.metadata.raze.crates.webpki.'0.21.4']
gen_buildrs = true
data_attr = "glob([\"src/**/*.der\"])"
[package.metadata.raze.crates.webpki.'0.22.0']
gen_buildrs = true
data_attr = "glob([\"src/**/*.der\"])"

[profile.release]
strip = true
